feat(swagger): swagger docs
